# dual-modal-research-public

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  documentation_update.txt  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  temp_update.txt
data/MNIST/raw/: README.md
data/cifar-10-batches-py/: README.md
docs/: api.md  architecture.md  examples.md  getting_started.md  implementation.md  methodology.md  results.md  troubleshooting.md
examples/: ADVANCED_USAGE.md  dual_modal_analysis_example.py  quick_start.py
models/: dual_modal_net.py
paper/: paper_config.json
results/: dual_modal_test_results.json  quick_test_results.json
results/experimental-data/: README.md
results/visualizations/: README.md
scripts/: create_comprehensive_visualizations.py  run_comprehensive_analysis.py  run_real_dataset_validation.py  run_tests_debug.py
src/dual_modal/: __init__.py
src/dual_modal/integration/: __init__.py  framework.py
src/dual_modal/nn_eeg/: __init__.py  implementation.py
src/dual_modal/nn_fmri/: __init__.py  implementation.py
tests/: quick_start_test.py  test_benchmarks.py  test_dual_modal_core.py  test_import.py  test_integration.py  test_kopru_ai_human.py  test_neural_interface.py  test_nn_eeg.py  test_nn_fmri.py  test_real_world_scenarios.py  test_system_validation.py  test_yapyos.py
theory/: GLOSSARY.md  MATHEMATICAL-IMPLEMENTATION.md  MODULE_FORMULAS.md  framework-overview.md  mathematical-foundations.md  nn-eeg-methodology.md  nn-fmri-methodology.md
(+6 files in other folders)
